# cpp-constriction-squid

./: .gitignore  CMakeLists.txt  Doxyfile  Main.cpp  README.md
docs/html/: _field_8cpp.html  _field_8h.html  _field_8h_source.html  _main_8cpp.html  _superconductor_8cpp.html  _superconductor_8h.html  _superconductor_8h_source.html  annotated.html  class_field-members.html  class_field.html  class_superconductor-members.html  class_superconductor.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_type.html  index.html  menudata.js
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  classes_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js  typedefs_0.js
docs/xml/: Doxyfile.xml  _main_8cpp.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml
include/: AbstractField.h  Field.h  Geometry.h  Superconductor.h
source/: conf.py  index.rst
src/: AbstractField.tpp  Field.cpp  Geometry.cpp  Main.cpp  Superconductor.cpp
tests/: CMakeLists.txt  testabstractfield.cpp  testfield.cpp  testgeometry.cpp  testsuperconductor.cpp
